Package_Tools/include-C/gst/123_in_arbeit/sdp/gstsdpmessage.pp


{ Session descriptions  }
function gst_sdp_message_new(msg:PPGstSDPMessage):TGstSDPResult;cdecl;external;
function gst_sdp_message_init(msg:PGstSDPMessage):TGstSDPResult;cdecl;external;
function gst_sdp_message_uninit(msg:PGstSDPMessage):TGstSDPResult;cdecl;external;
function gst_sdp_message_free(msg:PGstSDPMessage):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_copy(msg:PGstSDPMessage; copy:PPGstSDPMessage):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_parse_buffer(data:Pguint8; size:Tguint; msg:PGstSDPMessage):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_as_text(msg:PGstSDPMessage):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_new_from_text(text:Pgchar; msg:PPGstSDPMessage):TGstSDPResult;cdecl;external;
{ convert from/to uri  }
(* Const before type ignored *)
function gst_sdp_message_parse_uri(uri:Pgchar; msg:PGstSDPMessage):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_as_uri(scheme:Pgchar; msg:PGstSDPMessage):Pgchar;cdecl;external;
{ utils  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_address_is_multicast(nettype:Pgchar; addrtype:Pgchar; addr:Pgchar):Tgboolean;cdecl;external;
{ v=..  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_version(msg:PGstSDPMessage):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_set_version(msg:PGstSDPMessage; version:Pgchar):TGstSDPResult;cdecl;external;
{ o=<username> <sess-id> <sess-version> <nettype> <addrtype> <unicast-address>  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_origin(msg:PGstSDPMessage):PGstSDPOrigin;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_set_origin(msg:PGstSDPMessage; username:Pgchar; sess_id:Pgchar; sess_version:Pgchar; nettype:Pgchar; 
           addrtype:Pgchar; addr:Pgchar):TGstSDPResult;cdecl;external;
{ s=<session name>  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_session_name(msg:PGstSDPMessage):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_set_session_name(msg:PGstSDPMessage; session_name:Pgchar):TGstSDPResult;cdecl;external;
{ i=<session description>  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_information(msg:PGstSDPMessage):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_set_information(msg:PGstSDPMessage; information:Pgchar):TGstSDPResult;cdecl;external;
{ u=<uri>  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_uri(msg:PGstSDPMessage):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_set_uri(msg:PGstSDPMessage; uri:Pgchar):TGstSDPResult;cdecl;external;
{ e=<email-address>  }
(* Const before type ignored *)
function gst_sdp_message_emails_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_email(msg:PGstSDPMessage; idx:Tguint):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_insert_email(msg:PGstSDPMessage; idx:Tgint; email:Pgchar):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_replace_email(msg:PGstSDPMessage; idx:Tguint; email:Pgchar):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_email(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_add_email(msg:PGstSDPMessage; email:Pgchar):TGstSDPResult;cdecl;external;
{ p=<phone-number>  }
(* Const before type ignored *)
function gst_sdp_message_phones_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_phone(msg:PGstSDPMessage; idx:Tguint):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_insert_phone(msg:PGstSDPMessage; idx:Tgint; phone:Pgchar):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_replace_phone(msg:PGstSDPMessage; idx:Tguint; phone:Pgchar):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_phone(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_add_phone(msg:PGstSDPMessage; phone:Pgchar):TGstSDPResult;cdecl;external;
{ c=<nettype> <addrtype> <connection-address>[/<ttl>][/<number of addresses>]  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_connection(msg:PGstSDPMessage):PGstSDPConnection;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_set_connection(msg:PGstSDPMessage; nettype:Pgchar; addrtype:Pgchar; address:Pgchar; ttl:Tguint; 
           addr_number:Tguint):TGstSDPResult;cdecl;external;
{ b=<bwtype>:<bandwidth>  }
(* Const before type ignored *)
function gst_sdp_message_bandwidths_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_bandwidth(msg:PGstSDPMessage; idx:Tguint):PGstSDPBandwidth;cdecl;external;
function gst_sdp_message_insert_bandwidth(msg:PGstSDPMessage; idx:Tgint; bw:PGstSDPBandwidth):TGstSDPResult;cdecl;external;
function gst_sdp_message_replace_bandwidth(msg:PGstSDPMessage; idx:Tguint; bw:PGstSDPBandwidth):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_bandwidth(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_add_bandwidth(msg:PGstSDPMessage; bwtype:Pgchar; bandwidth:Tguint):TGstSDPResult;cdecl;external;
{ t=<start-time> <stop-time> and
 * r=<repeat interval> <active duration> <offsets from start-time>  }
(* Const before type ignored *)
function gst_sdp_message_times_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_time(msg:PGstSDPMessage; idx:Tguint):PGstSDPTime;cdecl;external;
function gst_sdp_message_insert_time(msg:PGstSDPMessage; idx:Tgint; t:PGstSDPTime):TGstSDPResult;cdecl;external;
function gst_sdp_message_replace_time(msg:PGstSDPMessage; idx:Tguint; t:PGstSDPTime):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_time(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_add_time(msg:PGstSDPMessage; start:Pgchar; stop:Pgchar; _repeat:PPgchar):TGstSDPResult;cdecl;external;
{ z=<adjustment time> <offset> <adjustment time> <offset> ....  }
(* Const before type ignored *)
function gst_sdp_message_zones_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_zone(msg:PGstSDPMessage; idx:Tguint):PGstSDPZone;cdecl;external;
function gst_sdp_message_insert_zone(msg:PGstSDPMessage; idx:Tgint; zone:PGstSDPZone):TGstSDPResult;cdecl;external;
function gst_sdp_message_replace_zone(msg:PGstSDPMessage; idx:Tguint; zone:PGstSDPZone):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_zone(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_add_zone(msg:PGstSDPMessage; adj_time:Pgchar; typed_time:Pgchar):TGstSDPResult;cdecl;external;
{ k=<method>[:<encryption key>]  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_key(msg:PGstSDPMessage):PGstSDPKey;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_set_key(msg:PGstSDPMessage; _type:Pgchar; data:Pgchar):TGstSDPResult;cdecl;external;
{ a=...  }
(* Const before type ignored *)
function gst_sdp_message_attributes_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_attribute(msg:PGstSDPMessage; idx:Tguint):PGstSDPAttribute;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_attribute_val(msg:PGstSDPMessage; key:Pgchar):Pgchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_attribute_val_n(msg:PGstSDPMessage; key:Pgchar; nth:Tguint):Pgchar;cdecl;external;
function gst_sdp_message_insert_attribute(msg:PGstSDPMessage; idx:Tgint; attr:PGstSDPAttribute):TGstSDPResult;cdecl;external;
function gst_sdp_message_replace_attribute(msg:PGstSDPMessage; idx:Tguint; attr:PGstSDPAttribute):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_attribute(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_add_attribute(msg:PGstSDPMessage; key:Pgchar; value:Pgchar):TGstSDPResult;cdecl;external;
{ m=.. sections  }
(* Const before type ignored *)
function gst_sdp_message_medias_len(msg:PGstSDPMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_message_get_media(msg:PGstSDPMessage; idx:Tguint):PGstSDPMedia;cdecl;external;
function gst_sdp_message_add_media(msg:PGstSDPMessage; media:PGstSDPMedia):TGstSDPResult;cdecl;external;
function gst_sdp_message_remove_media(msg:PGstSDPMessage; idx:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_message_dump(msg:PGstSDPMessage):TGstSDPResult;cdecl;external;
{ Media descriptions  }
function gst_sdp_media_new(media:PPGstSDPMedia):TGstSDPResult;cdecl;external;
function gst_sdp_media_init(media:PGstSDPMedia):TGstSDPResult;cdecl;external;
function gst_sdp_media_uninit(media:PGstSDPMedia):TGstSDPResult;cdecl;external;
function gst_sdp_media_free(media:PGstSDPMedia):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_copy(media:PGstSDPMedia; copy:PPGstSDPMedia):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_as_text(media:PGstSDPMedia):Pgchar;cdecl;external;
{ m=<media> <port>/<number of ports> <proto> <fmt> ...  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_media(media:PGstSDPMedia):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_set_media(media:PGstSDPMedia; med:Pgchar):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_get_port(media:PGstSDPMedia):Tguint;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_get_num_ports(media:PGstSDPMedia):Tguint;cdecl;external;
function gst_sdp_media_set_port_info(media:PGstSDPMedia; port:Tguint; num_ports:Tguint):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_proto(media:PGstSDPMedia):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_set_proto(media:PGstSDPMedia; proto:Pgchar):TGstSDPResult;cdecl;external;
(* Const before type ignored *)
function gst_sdp_media_formats_len(media:PGstSDPMedia):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_sdp_media_get_format(media:PGstSDPMedia; idx:Tguint):Pgchar;cdecl;external;
